test/cli/test-mutating-policy/non-k8s-json/patched-resource.yaml
application:
  name: web-app
  version: 1.0.0
processedBy: kyverno
user:
  email: john@example.com
  name: john
  settings:
    notifications: true
    theme: dark
    validated: true
